<resources>
    <string name="app_name">Invoice</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="print">Print</string>
    <string name="total">Total:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_description">Shop Description</string>
    <string name="shop_number">Shop Number</string>
    <string name="shop_address">Shop Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="product_name">Product Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="shop_information">Shop Information</string>
    <string name="products">Products</string>
    <string name="invoice">Invoice</string>
    <string name="categories">Categories</string>
    <string name="category_name">Category Name</string>
    <string name="purchase_rate">Purchase Rate</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="category">Category</string>
    <string name="purchase">Purchase</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_address">Full Address</string>
    <string name="sign_up">Sign up</string>

    <string name="delete_products">Delete products</string>
    <string name="add_to_invoice">Add to invoice</string>

    <string name="product_upload">Product Upload</string>

</resources>