<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/add"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="0dp"
                >



                <TableLayout
                    android:id="@+id/table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    >
                    <TableRow android:background="#0079D6" android:padding="5dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:text="@string/product_name" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:text="@string/category" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:text="@string/purchase" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:text="@string/price" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textStyle="bold"

                            android:text="@string/stock" />
                    </TableRow>



                </TableLayout>
            </LinearLayout>
        </ScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/green"
            android:text="@string/add" />
    </RelativeLayout>

</layout>
